force-app/main/default/objects/Lease__c/fields/DueDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>DueDayOfMonth__c</fullName>
    <description>Allowed values 1–28.</description>
    <label>Due Day of Month</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>