force-app/main/default/objects/Lease__c/fields/LeaseKey__c.field-meta.xml
<CustomField>
    <fullName>LeaseKey__c</fullName>
    <description>Optional external key for imports/mapping.</description>
    <externalId>true</externalId>
    <label>Lease Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>