force-app/main/default/objects/Lease__c/fields/MonthlyRent__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRent__c</fullName>
    <label>Monthly Rent</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>