force-app/main/default/objects/Lease__c/fields/RentalAsset__c.field-meta.xml
<CustomField>
    <fullName>RentalAsset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rental Asset</label>
    <referenceTo>RentalAsset__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>