force-app/main/default/objects/Lease__c/fields/Test_Agentforce_Org__c.field-meta.xml
<CustomField>
    <fullName>Test_Agentforce_Org__c</fullName>
    <label>Test Agentforce Org</label>
    <length>30</length>
    <type>Text</type>
</CustomField>