force-app/main/default/objects/Lease__c/fields/Total_Outstanding_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Invoice_Amount__c</fullName>
    <description>Calculates the total outstanding balance from related invoices.</description>
    <label>Total Outstanding Invoice Amount</label>
    <summarizedField>Invoice__c.OutstandingAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.OutstandingAmount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Lease__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>